# iwiywi

./: .gitattributes  Cargo.toml  Dockerfile  README.md
.github/workflows/: README-deploy-docs.md  ci.yml  deploy-docs.yml  release.yml
deploy/: iwiywi-fetch.service  iwiywi-fetch.timer  iwiywi.service
docs/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  deploy.md
docs/starlight/: .env.example  .gitignore  .vercel-setup.md  astro.config.mjs  package.json
docs/superpowers/plans/: 2026-04-14-drift-screensaver.md  2026-04-14-iwiywi-1-fetch.md  2026-04-14-iwiywi-2-tui.md  2026-04-14-iwiywi-3-distribution.md  2026-04-14-iwiywi-documentation.md  2026-04-15-pulse-only-tui.md  2026-04-15-pulse.md
docs/superpowers/specs/: 2026-04-14-drift-screensaver-design.md  2026-04-14-iwiywi-design.md  2026-04-14-iwiywi-documentation-design.md  2026-04-15-pulse-only-tui-design.md
src/: config.rs  main.rs  models.rs  storage.rs
src/fetch/: ai.rs  ai_extract.rs  classify.rs  deploy.rs  gist.rs  html.rs  markdown.rs  mod.rs  reddit.rs  scraper.rs
src/install/: mod.rs
src/pulse/: bill.rs  bundled.rs  community.rs  favorites.rs  grapevine.rs  historical.rs  mod.rs  summary.rs  today.rs
src/pulse/data/: big_book.json  concepts.json  grapevine_fallback.json  (+4 more)
src/tui/: clipboard.rs  clock.rs  commands.rs  drift.rs  export.rs  help.rs  journal.rs  journal_browser.rs  menu.rs  milestones.rs  mod.rs  moon.rs  overlay.rs  palette.rs  pattern.rs  qr.rs  status.rs  text_size.rs  theme.rs  weather.rs  widgets.rs
src/web/: index.html  manifest.json  mod.rs  pulse.css  pulse.js
(+24 files in other folders)
