[package]
name = "iwiywi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iwiywi"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
dirs = "5"
sha2 = "0.10"
noise = "0.9"
axum = "0.7"

[dev-dependencies]
mockito = "1"
tempfile = "3"
